code cleanup - mondrian.calc.impl
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>